--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -89,6 +89,7 @@
         loading_small: '{% static "img/loading_small.gif" %}',
         loading_large: '{% static "img/loading_large.gif" %}'
       };
+      var USER = {{ user_json|safe }};
     </script>
     <script src="{% static "js/json2.js" %}"></script>
     <script src="{% static "js/es5-shim.js" %}"></script>
