base: update rivets adapter

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -113,11 +113,10 @@
       rivets.configure({
         adapter: {
           subscribe: function(obj, keypath, callback) {
-            callback.wrapped = function(m, v) { callback(v) };
-            obj.on('change:' + keypath, callback.wrapped);
+            obj.on('change:' + keypath, callback);
           },
           unsubscribe: function(obj, keypath, callback) {
-            obj.off('change:' + keypath, callback.wrapped);
+            obj.off('change:' + keypath, callback);
           },
           read: function(obj, keypath) {
             return obj.get(keypath);
