less: change the sprite path to account for compressor cache

--- a/project_name/static/less/main.less
+++ b/project_name/static/less/main.less
@@ -99,6 +99,9 @@ textarea {
 @import "bootstrap.less";
 //@import "responsive.less";
 
+@iconSpritePath: "../../img/glyphicons-halflings.png";
+@iconWhiteSpritePath: "../../img/glyphicons-halflings-white.png";
+
 // sticky footer
 html,
 body {
