main.js: enhance base template to include some other useful/necessary tooling

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="sticky-main container">
+    <div id="content" class="sticky-main container">
       {% block content %}{% endblock %}
     </div>
   </div>
