forgot url templatetag in base.html

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -86,7 +86,7 @@
     <script>
       var API = {
         'v1': {
-          'user': '{% api_dispatch_list api_name="v1",resource_name="user" %}'
+          'user': '{% url api_dispatch_list api_name="v1",resource_name="user" %}'
         }
       };
       var APP = {};
