--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   {% load compress %}
+  {% load core %}
   {% load staticfiles %}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -137,10 +138,20 @@
           }
         }
       });
+
+      $(function() {
+        var el = document.getElementById('content');
+        var $el = $(el);
+        APP.global.router = new APP.Router(el);
+        if (  ! Backbone.history.start({pushState: true})
+            && $el.children().length === 0) {
+          APP.global.router.do_404();
+        }
+      });
     </script>
   {% endcompress %}
   {% block extrajs %}{% endblock %}
-  {% block extrajstemplates %}{% endblock %}
+
   <script>
     var USER = {{ user_json|safe }};
     _.extend(Backbone.Tastypie.apiKey, {
@@ -148,6 +159,38 @@
       'key': '{{ user.api_key.key }}'
     });
   </script>
+
+  {% verbatim %}
+  <script type="text/template" id="template-404">
+    <h1>404: Page not found</h1>
+    <p>
+      You may have hit this page for a few reasons:
+
+      <ul>
+        <li>The application does not handle the URL</li>
+        <li>The object you are trying to access does not exist</li>
+      </ul>
+
+      If you think this page should exist, please contact the administrator.
+    </p>
+  </script>
+
+  <script type="text/template" id="template-home">
+  <div class="row">
+    <div class="hero-unit">
+      <h1>{% endverbatim %}{{ settings.PROJECT_NAME }}{% verbatim %}</h1>
+      <p>Tagline</p>
+      <p>
+        <a class="btn btn-primary btn-large">
+          Learn more
+        </a>
+      </p>
+    </div>
+  </div>
+  </script>
+  {% endverbatim %}
+
+  {% block extrajstemplates %}{% endblock %}
 
   {% if settings.GOOGLE_ANALYTICS_KEY %}
     <script>
