base: use traditional formatted keys

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -108,6 +108,7 @@
     <script src="{% static "js/bootstrap.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
     <script>
+      jQuery.ajaxSettings.traditional = true;
       _.mixin(_.str.exports());
       rivets.configure({
         adapter: {
