--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -106,6 +106,7 @@
     <script src="{{ STATIC_URL }}js/moment.js"></script>
     <script src="{{ STATIC_URL }}js/rivets.js"></script>
     <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+    <script src="{{ STATIC_URL }}js/q.js"></script>
     <script src="{{ STATIC_URL }}js/main.js"></script>
     <script>
       jQuery.ajaxSettings.traditional = true;
